# tree-sitter-imp

./: .gitignore  Cargo.toml  binding.gyp  grammar.js  package.json  readme.md  shell.nix
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: tests.txt
examples/: factorial.imp
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
